--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -89,6 +89,24 @@ Combine `Icon` and `Label` when you need to add more metadata or context to the 
 </Card>
 ```
 
+### Image
+
+Use the `Image` component to add an image to the `Card`. The `Image` component is optional and provides a visual context to the `Card`.
+
+```jsx live
+<Card href="https://github.com">
+  <Card.Image
+    src="https://github.githubassets.com/images/modules/site/home-illo-team.svg"
+    alt=""
+  />
+  <Card.Heading>Code search & code view</Card.Heading>
+  <Card.Description>
+    Enables you to rapidly search, navigate, and understand code, right from
+    GitHub.com.
+  </Card.Description>
+</Card>
+```
+
 ### Stacked cards
 
 Use the `Stack` component to stack multiple cards horizontally or vertically.
