Add metadata to layout, update Avatar docs

--- a/apps/docs/content/components/Avatar/react.mdx
+++ b/apps/docs/content/components/Avatar/react.mdx
@@ -7,8 +7,11 @@ storybook: '/brand/storybook/?path=/story/components-Avatar--playground'
 description: Use Avatar to display a thumbnail representation of a person.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Label} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 import {AvatarSizes, AvatarShapes} from '@primer/react-brand'
 
 ```js
