--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -96,9 +96,28 @@ Use the `Image` component to add an image to the `Card`. The `Image` component i
 ```jsx live
 <Card href="https://github.com">
   <Card.Image
-    src="https://github.githubassets.com/images/modules/site/home-illo-team.svg"
+    src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
     alt=""
   />
+  <Card.Heading>Code search & code view</Card.Heading>
+  <Card.Description>
+    Enables you to rapidly search, navigate, and understand code, right from
+    GitHub.com.
+  </Card.Description>
+</Card>
+```
+
+### Image and Label
+
+Combine `Image` and `Label` when you need to add more metadata or context to the `Card`. Use either the `Icon` or `Image` as the primary visual context, but not both.
+
+```jsx live
+<Card href="https://github.com">
+  <Card.Image
+    src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
+    alt=""
+  />
+  <Card.Label color="blue">Beta</Card.Label>
   <Card.Heading>Code search & code view</Card.Heading>
   <Card.Description>
     Enables you to rapidly search, navigate, and understand code, right from
@@ -150,6 +169,14 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 | --------- | -------- | ----------- | -------- | ------------------------------------------- |
 | `href`    | `string` |             | `true`   | URL to the card content                     |
 | `ctaText` | `string` | `Read more` | `false`  | Label of the link at the bottom of the Card |
+
+### Card.Image
+
+| name          | type                                              | default     | required | description                                                                                 |
+| ------------- | ------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------- |
+| `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                             |
+| `alt`         | `string`                                          |             | `true`   | Specifies a text value explaining the nature of the image for users of assistive technology |
+| `aspectRatio` | `'1:1'`, `'16:9'`, `'16:10'`, `'4:3'`, `'custom'` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.           |
 
 ### Card.Icon
 
