--- a/apps/docs/content/components/Avatar/index.mdx
+++ b/apps/docs/content/components/Avatar/index.mdx
@@ -1,26 +1,30 @@
 ---
 title: Avatar
-status: Experimental
-figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=543%3A19830&t=Be91VGjX2BANJnQc-11'
-source: https://github.com/primer/brand/tree/main/packages/react/src/Avatar/Avatar.tsx
-storybook: '/brand/storybook/?path=/story/components-Avatar--playground'
 description: Use Avatar to display a thumbnail representation of a person.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
 export default ComponentLayout
 
+![An image showing two different avatars, a circular and a square one.](https://user-images.githubusercontent.com/175638/234820833-c803cb11-2bc3-4597-88f3-2cf630a46702.png)
+
 ## Usage
 
-Use avatars to represent individuals in testimonials, when adding speaker sessions, post writers, and more.
+Use avatars to display a thumbnail that represents individuals in various contexts, such as testimonials, speaker sessions, blog post authors, and beyond.
 
 ## Options
 
 ### Size
 
+Avatar offers various sizes to fit different layout and visual scale needs. Sizes range from 32 to 80 pixels. Ensure the avatar is proportionate to its accompanying text.
+
+![An image showing the size scale of the avatar component: 32, 40, 48, 64, and 80 pixels](https://user-images.githubusercontent.com/175638/234826575-1d1d5019-f714-41b1-b8bc-c0d312a46cfe.png)
+
 ### Shape
 
-### Accessiblity
+Avatars appear as two different shapes: circle and square. The choice depends on the desired visual impression and the overall design aesthetic of your project.
+
+![An image showing the two different shapes of the avatar component: circle and square](https://user-images.githubusercontent.com/175638/234827120-da548115-450b-4ec8-a6e6-5dcbe98e77c5.png)
 
 ## Related /story/components
 
