Fix Avatar docs

--- a/apps/docs/content/components/Avatar/index.mdx
+++ b/apps/docs/content/components/Avatar/index.mdx
@@ -26,7 +26,7 @@ Avatars appear as two different shapes: circle and square. The choice depends on
 
 ![An image showing the two different shapes of the avatar component: circle and square](https://user-images.githubusercontent.com/175638/234827120-da548115-450b-4ec8-a6e6-5dcbe98e77c5.png)
 
-## Related /story/components
+## Related components
 
 - [Image](/components/Image)
 - [Testimonial](/components/Testimonial)
