add support for no title in SubdomainNavBar

--- a/apps/docs/content/components/SubdomainNavBar.mdx
+++ b/apps/docs/content/components/SubdomainNavBar.mdx
@@ -122,6 +122,14 @@ const App = () => {
 render(App)
 ```
 
+### No title
+
+```jsx live
+<Box sx={{position: 'relative', overflowX: 'scroll'}}>
+  <SubdomainNavBar title="" fixed={false} />
+</Box>
+```
+
 ## Component props
 
 ### SubdomainNavBar <Label>Required</Label>
