--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -35,7 +35,7 @@ import {Hero} from '@primer/react-brand'
     elementum.
   </Hero.Description>
   <Hero.PrimaryAction href="#">Primary action</Hero.PrimaryAction>
-  <Hero.SecondaryAction>Secondary action</Hero.SecondaryAction>
+  <Hero.SecondaryAction href="#">Secondary action</Hero.SecondaryAction>
 </Hero>
 ```
 
