--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -91,7 +91,7 @@ Combine `Icon` and `Label` when you need to add more metadata or context to the 
 
 ### Image
 
-Use the `Image` component to add an image to the `Card`. The `Image` component is optional and provides a visual context to the `Card`. The aspect ratio of the image can be customized using the `aspectRatio` prop.
+Use the `Image` component to add an image to the `Card`. The `Image` component is optional and provides a visual context to the `Card`.
 
 ```jsx live
 <Card href="https://github.com">
@@ -173,11 +173,18 @@ Use the `Stack` component to stack multiple cards horizontally or vertically.
 
 ### Card.Image
 
-| name          | type                                              | default     | required | description                                                                                 |
-| ------------- | ------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------- |
-| `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                             |
-| `alt`         | `string`                                          |             | `true`   | Specifies a text value explaining the nature of the image for users of assistive technology |
-| `aspectRatio` | `'1:1'`, `'16:9'`, `'16:10'`, `'4:3'`, `'custom'` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.           |
+| name          | type                                              | default     | required | description                                                                                                                                                               |
+| ------------- | ------------------------------------------------- | ----------- | -------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| `src`         | `string`                                          |             | `true`   | Specifies the path to the image                                                                                                                                           |
+| `alt`         | `string`                                          |             | `true`   | Specifies a text value explaining the nature of the image for users of assistive technology                                                                               |
+| `as`          | `img`, `picture`                                  | `img`       | `false`  | Specification to create a picture component                                                                                                                               |
+| `sources`     | `{srcset: string, media: string}[]`               |             | `false`  | When picture is specified in the `as` prop sources allows you to set the source elements.                                                                                 |
+| `aspectRatio` | `'1:1'`, `'16:9'`, `'16:10'`, `'4:3'`, `'custom'` | `undefined` | `false`  | Sets the image aspect ratio. A custom ratio can be provided in the design tokens.                                                                                         |
+| `height`      | `number`                                          |             | `false`  | The height of the image element or its container if it has an aspect ratio                                                                                                |
+| `width`       | `number`                                          |             | `false`  | The width of the image element or its container if it has an aspect ratio                                                                                                 |
+| `loading`     | `eager`, `lazy`                                   | `eager`     | `false`  | The loading attribute specifies whether a browser should load an image immediately or to defer loading of off-screen images until for example the user scrolls near them. |
+| `decoding`    | `sync`, `async`, `auto`                           | `sync`      | `false`  | Sets the image decoding strategy. Representing a hint given to the browser on how it should decode the image.                                                             |
+| `className`   | `string`                                          |             | `false`  | Sets a custom CSS class                                                                                                                                                   |
 
 ### Card.Icon
 
