--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -116,7 +116,7 @@ Combine `Image` and `Label` when you need to add more metadata or context to the
 <Card href="https://github.com">
   <Card.Image
     src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
-    alt=""
+    alt="placeholder, blank area with an gray background color"
   />
   <Card.Label color="blue">Beta</Card.Label>
   <Card.Heading>Code search & code view</Card.Heading>
