--- a/apps/docs/content/components/Card.mdx
+++ b/apps/docs/content/components/Card.mdx
@@ -97,7 +97,7 @@ Use the `Image` component to add an image to the `Card`. The `Image` component i
 <Card href="https://github.com">
   <Card.Image
     src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
-    alt=""
+    alt="placeholder, blank area with an gray background color"
     aspectRatio="16:9"
   />
   <Card.Heading>Code search & code view</Card.Heading>
