Add Card guidelines

--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -6,9 +6,12 @@ storybook: '/brand/storybook/?path=/story/components-card--default'
 description: Use the Card component to display information in a compact way and link to other internal pages.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {LabelColors, CardIconColors} from '@primer/react-brand'
 import {IconColors} from '@primer/react-brand'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 import {CopilotIcon, RocketIcon, GitBranchIcon} from '@primer/octicons-react'
 
 ```js
