--- a/apps/docs/content/components/Pillar.mdx
+++ b/apps/docs/content/components/Pillar.mdx
@@ -101,7 +101,7 @@ Use the `Stack` component to stack multiple Pillars horizontally or vertically.
 
 | name    | type              | default | required | description               |
 | ------- | ----------------- | ------- | -------- | ------------------------- |
-| `align` | `start`, `center` | `start` | `true`   | Aligns the pillar content |
+| `align` | `start`, `center` | `start` | `false`   | Aligns the pillar content |
 
 ### Pillar.Icon
 
