--- a/apps/docs/content/components/Pillar.mdx
+++ b/apps/docs/content/components/Pillar.mdx
@@ -99,9 +99,10 @@ Use the `Stack` component to stack multiple Pillars horizontally or vertically.
 
 ### Pillar
 
-| name    | type              | default | required | description               |
-| ------- | ----------------- | ------- | -------- | ------------------------- |
-| `align` | `start`, `center` | `start` | `false`   | Aligns the pillar content |
+| name    | type                                                                  | default | required | description                                 |
+| ------- | --------------------------------------------------------------------- | ------- | -------- | ------------------------------------------- |
+| `align` | `start`, `center`                                                     | `start` | `false`  | Aligns the pillar content                   |
+| `as`    | <PropTableValues values={['div', 'article', 'span']} addLineBreaks /> | `'div'` | `false`  | The HTML element used to render the pillar. |
 
 ### Pillar.Icon
 
