--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -39,17 +39,15 @@ The CTA is a text that indicates the action that will be performed when the user
 
 ## Usage
 
-Cards are a clickable excerpt leading the fuller form of the content they summarize. They introduce the core element of the content behind it and always link to it.
-
-### Keep content simple
-
-Cards should be used to display information in a compact way. Avoid using them to display long texts or complex information.
+Cards are a clickable excerpt leading the fuller form of the content they summarize. They introduce the core element of the content behind it and always link to it. Cards should be used to display information in a compact way. Don't use them to display long texts or complex information.
 
 ### Stacked
 
-Cards can be stacked to display a list of items that are related to each other. When used in a stack, provide either a visual asset for all cards or none. If you provide a visual asset for some cards and not for others, it will create visual noise and make the stack look unbalanced. The visual asset should be the same type for all cards, so either an icon or an image.
+Cards can be stacked to display a list of items that are related to each other. When used in a stack, provide either a visual asset for all cards or none. If you provide a visual asset for some cards and not for others, it will create visual noise and make the stack look unbalanced. The visual asset should be the same type for all cards, either an icon or an image.
 
-For a better visual experience, we recommend using similar length size for the heading and description as well.
+Cards typically appear in groups of three or four. For rows of four cards, we recommend using short and concise content and avoid using images as the visual asset. When more than four cards or extensive content is needed, stack them vertically in rows of three.
+
+For a better visual experience, we recommend using similar length size for the heading and description in all stacked cards.
 
 <DoDontContainer stacked>
   <Do>
@@ -67,6 +65,6 @@ For a better visual experience, we recommend using similar length size for the h
   </Dont>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/a665b68d-1a9e-421f-a230-60b5763b901e" />
-    <Caption>Don't use different Image or Icon sizes.</Caption>
+    <Caption>Don't use image or icons with different sizes or ratios.</Caption>
   </Dont>
 </DoDontContainer>
