--- a/apps/docs/content/components/Pillar.mdx
+++ b/apps/docs/content/components/Pillar.mdx
@@ -4,6 +4,7 @@ status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Pillar/Pillar.tsx
 storybook: '/brand/storybook/?path=/story/components-pillar--default'
 description: Use Pillar to display an informational block of text
+figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=6849-31364&mode=design
 ---
 
 import {PillarIconColors} from '@primer/react-brand'
