--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -63,8 +63,22 @@ For a better visual experience, we recommend using similar length size for the h
       Don't use different lenght sizes for the title or the description content.
     </Caption>
   </Dont>
+</DoDontContainer>
+
+When using an image as the visual asset, we recommend using the same aspect ratio for all images. This will create a more balanced visual experience.
+
+<DoDontContainer stacked>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/0ec93c16-7091-4ebb-a1a0-b0626de7833f" />
+    <Caption>
+      Use the same image ratio and a similar lenght sizes for the content.
+    </Caption>
+  </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/a665b68d-1a9e-421f-a230-60b5763b901e" />
-    <Caption>Don't use image or icons with different sizes or ratios.</Caption>
+    <img src="https://github.com/primer/brand/assets/912236/0b8ffb2d-0753-4bdd-9165-0f30ec28a8c8" />
+    <Caption>
+      Don't use different image ratios and a different length size for the
+      content.
+    </Caption>
   </Dont>
 </DoDontContainer>
