--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -3,7 +3,7 @@ title: Card
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Card/Card.tsx
 storybook: '/brand/storybook/?path=/story/components-card--default'
-description: Use the Card component to display information in a compact way and link to other internal pages.
+description: Use Card to group information in a compact way and link to other pages.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
