--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -21,7 +21,7 @@ The visual asset is optional and can be an image or an icon. It can be used to p
 
 ### Label
 
-The label can be used to indicate the type of content or the status of the card. For example, it can be used to indicate that the content is `new` or that it is a `beta` feature. The label is optional and can be used along with a visual asset.
+The label can be used to indicate the type of content or its status. For example, use it to indicate that the content is `new` or that it is a `beta` feature. The label is optional and can be used along with a visual asset.
 
 ![An image showing two Cards, one with a Label and another one with Label and Icon.](https://github.com/primer/brand/assets/912236/2d84fe89-2735-451e-9d1f-9a2f0297e7b5)
 
