--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -35,7 +35,7 @@ The description is an optional short text that extends the information provided 
 
 ### CTA
 
-The CTA is a text that indicates the action that will be performed when the user clicks on the card. It defaults to "Learn more".
+The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
 
 ## Usage
 
