--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -33,7 +33,7 @@ The heading is the main title of the card. It should be short and concise.
 
 The description is an optional short text that extends the information provided by the heading.
 
-### CTA
+### Call to action
 
 The call to action label indicates the action or resource the card links to. It defaults to "Learn more".
 
