--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -43,7 +43,7 @@ Cards are a clickable excerpt leading the fuller form of the content they summar
 
 ### Stacked
 
-Cards can be stacked to display a list of items that are related to each other. When used in a stack, provide either a visual asset for all cards or none. If you provide a visual asset for some cards and not for others, it will create visual noise and make the stack look unbalanced. The visual asset should be the same type for all cards, either an icon or an image.
+Cards should be stacked to display a list of items that are related to each other. If displaying a visual asset, do so for all cards to achieve a visually balanced layout. The visual asset should be the same type for all cards, either an icon or an image.
 
 Cards typically appear in groups of three or four. For rows of four cards, we recommend using short and concise content and avoid using images as the visual asset. When more than four cards or extensive content is needed, stack them vertically in rows of three.
 
