--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -39,7 +39,9 @@ The call to action label indicates the action or resource the card links to. It 
 
 ## Usage
 
-Cards are a clickable excerpt leading the fuller form of the content they summarize. They introduce the core element of the content behind it and always link to it. Cards should be used to display information in a compact way. Don't use them to display long texts or complex information.
+Use cards to summarize the core idea behind some content and link to its detailed resource. Always display information in a compact way and avoid long texts or complex information.
+
+Cards should always be used in groups of two or more related concepts.
 
 ### Stacked
 
