--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -47,22 +47,20 @@ Cards should always be used in groups of two or more related concepts.
 
 Cards should be stacked to display a list of items that are related to each other. If displaying a visual asset, do so for all cards to achieve a visually balanced layout. The visual asset should be the same type for all cards, either an icon or an image.
 
-Cards typically appear in groups of three or four. For rows of four cards, we recommend using short and concise content and avoid using images as the visual asset. When more than four cards or extensive content is needed, stack them vertically in rows of three.
-
 For a better visual experience, we recommend using similar length size for the heading and description in all stacked cards.
 
 <DoDontContainer stacked>
   <Do>
     <img src="https://github.com/primer/brand/assets/912236/66394dda-13de-4c86-bd82-534d99d593d8" />
     <Caption>
-      Use the same type of visual asset when stacking cards and a similar lenght
-      size for the content.
+      Use the same type of visual asset for all cards and a similar lenght size
+      for the content.
     </Caption>
   </Do>
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/c612ccf8-7c98-4213-92b9-2fdf6f0f1398" />
     <Caption>
-      Don't use different lenght sizes for the title or the description content.
+      Don't use different lenght sizes for the title or the description.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -81,6 +79,24 @@ When using an image as the visual asset, we recommend using the same aspect rati
     <Caption>
       Don't use different image ratios and a different length size for the
       content.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
+Cards typically appear in groups of three or four. For rows of four cards, we recommend using short and concise content and avoid using images as the visual asset. When more than four cards or extensive content is needed, stack them vertically.
+
+<DoDontContainer stacked>
+  <Do>
+    <img src="https://github.com/primer/brand/assets/912236/a56f80f9-9a02-4fe0-8d8b-eb61e8396030" />
+    <Caption>
+      Stack cards vertically using multiple rows so that the content is easy to
+      scan.
+    </Caption>
+  </Do>
+  <Dont>
+    <img src="https://github.com/primer/brand/assets/912236/3f467a76-da93-4b1c-a53e-763319df8049" />
+    <Caption>
+      Don't use a single row of cards if the content is too extensive.
     </Caption>
   </Dont>
 </DoDontContainer>
