Add design guidelines

--- a/apps/docs/content/components/Label/react.mdx
+++ b/apps/docs/content/components/Label/react.mdx
@@ -7,9 +7,12 @@ storybook: '/brand/storybook/?path=/story/components-label--default'
 description: Use Labels to add metadata or indicate the status of items.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Label, LabelColors, LabelSizes} from '@primer/react-brand'
 import {StarIcon, CopilotIcon} from '@primer/octicons-react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Label} from '@primer/react-brand'
